# dashboard_with_ml_study

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
dashboard_with_ml_study/notebook/: House_Price_Prediction_Machine_Learning.py  data_exploration_and_ml.ipynb
